--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#9b5378</color>
+    <color name="colorPrimaryDark">#6f3b56</color>
     <color name="colorAccent">#D81B60</color>
     <color name="text_dark_grey">#696969</color>
     <color name="text_grey">#808080</color>
