--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,11 +9,13 @@
     </style>
 
     <style name="TextPopulation" parent="TextAppearance.AppCompat.Large">
+        <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/text_dark_grey</item>
         <item name="android:textSize">@dimen/text_xxx_large</item>
     </style>
 
     <style name="TextCity" parent="TextAppearance.AppCompat.Large">
+        <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/text_dark_grey</item>
         <item name="android:textSize">@dimen/text_default</item>
     </style>
